gestisci prodotti amministratore, aggiornati dao, dto, servlet, prodotti, utente, categoria, e altro